@@ -1,7 +1,7 @@
 #
 # Copyright (C) 1997-2000 Matt Newman <matt@novadigm.com> 
 #
-# $Header: /cvsroot/tls/tls/tls.tcl,v 1.9 2008/03/18 00:40:37 hobbs2 Exp $
+# $Header: /cvsroot/tls/tls/tls.tcl,v 1.10 2008/03/19 02:34:21 patthoyts Exp $
 #
 namespace eval tls {
     variable logcmd tclLog
@@ -27,6 +27,19 @@ proc tls::initlib {dir dll} {
     # the dependent DLL's in the CWD, where they may be.
     set cwd [pwd]
     catch {cd $dir}
+    if {[string equal $::tcl_platform(platform) "windows"] &&
+	![string equal [lindex [file system $dir] 0] "native"]} {
+	# If it is a wrapped executable running on windows, the openssl
+	# dlls must be copied out of the virtual filesystem to the disk
+	# where Windows will find them when resolving the dependency in
+	# the tls dll. We choose to make them siblings of the executable.
+	package require starkit
+	set dst [file nativename [file dirname $starkit::topdir]]
+	foreach sdll [glob -nocomplain -directory $dir -tails *eay32.dll] {
+	    catch {file delete -force            $dst/$sdll}
+	    catch {file copy   -force $dir/$sdll $dst/$sdll}
+	}
+    }
     set res [catch {uplevel #0 [list load [file join [pwd] $dll]]} err]
     catch {cd $cwd}
     if {$res} {
@@ -248,3 +261,4 @@ proc tls::log {level msg} {
     lappend cmd $msg
     uplevel #0 $cmd
 }
+
