@@ -1,3 +1,8 @@
+2009-04-23  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tls.tcl (tls::initlib): add support for Windows starpack
+	operation that unbundles any constituent libraries. [AS Bug 82888]
+
 2008-06-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tests/ciphers.test: Fix for different openssl versions.
